# algorithms_cpp

backtracking/: CMakeLists.txt  n_queens.cpp  n_queens2.cpp  sudoku_solver2.cpp
bst/: CMakeLists.txt  bst.cpp  bst.h  bst_traverse.cpp  bst_traverse.h  bst_utility.h  bst_validate.cpp  find_closest.cpp  validate_bst.cpp  validate_bst.h
data_structures/: CMakeLists.txt  bst.cpp
dynamic/: CMakeLists.txt  knapsack_1_0.cpp  levenshtein_distance.cpp  max_subset_summ_no_adjacent.cpp  max_sum_increasing_subsequence.cpp  min_number_of_coins_for_change.cpp  numbers_of_ways_to_make_change.cpp
easy/: 01_two_number_sum.cpp  02_unique_substrings.cpp  03_find_unordered_substring.cpp  04_reverse_linkedlist.cpp  CMakeLists.txt  longest_subarray_remove_one.cpp
graph/: CMakeLists.txt  bidirectional_bfs.cpp  breadth_first_search.cpp  dijkstra.cpp  graph.cpp  graph.h  river_sizes.cpp  topological_sort.cpp
hackerrank/: CMakeLists.txt  almost_integer_rock_garden.cpp  kittys_calculations.cpp
heap/: CMakeLists.txt  continuous_median.cpp  heap_map.h  heap_map_test.cpp  min_heap.cpp  min_heap.h
kattis/: CMakeLists.txt  alphabet.cpp  alphabet.go  alphabet_build_run.sh
kattis/alphabet.data/: Alphabet-0000.in  Alphabet-0001.in
leetcode/: 0004_median_of_two_sorted_arrays.cpp  0008_string_to_integer.cpp  0015_three_sum.cpp  0018_four_sum.cpp  0033_search_in_rotated_array.cpp  0042_trappingg_rain_water.cpp  0053_maximum_subarray.cpp  0062_unique_paths.cpp  0215_kth_largest_element.cpp  1156_swap_for_longest_repeated_character_substring.cpp  1208_get_equal_substrings_within_budget.cpp  1209_remove_all_adjacent_duplicates_in_string.cpp  1247_minimum_swaps_to_make_strings_equal.cpp  200_number_of_islands.cpp  CMakeLists.txt  container_with_most_water.cpp  k_closest.cpp  license_key_formating.cpp  longgest_substring_with_two_distinct_characters.cpp  three_sum.cpp
misc/: CMakeLists.txt  lru_cache.cpp  sudoku_check.cpp  sudoku_solver.cpp
ranges/: CMakeLists.txt  merge_ranges.cpp
recursion/: CMakeLists.txt  permutations.cpp
search/: CMakeLists.txt  binary_search.cpp
shared/: array_utility.h  my_serialization.h  my_test.h
sorting/: CMakeLists.txt  bubble_sort.cpp  insertion_sort.cpp  quick_sort.cpp  selection_sort.cpp  shared.h
stack/: CMakeLists.txt  balanced_brackets.cpp  min_max_stack.cpp
strings/: CMakeLists.txt  regex_match.cpp
tree/: CMakeLists.txt  tree_from_edges.cpp
trie/: CMakeLists.txt  simple_trie.cpp
