project(Dynamic)

set(CMAKE_CXX_STANDARD 14)

add_executable(max_subset_summ_no_adjacent max_subset_summ_no_adjacent.cpp)
add_executable(numbers_of_ways_to_make_change numbers_of_ways_to_make_change.cpp)
add_executable(min_number_of_coins_for_change min_number_of_coins_for_change.cpp)
add_executable(knapsack_1_0 knapsack_1_0.cpp)
add_executable(levenshtein_distance levenshtein_distance.cpp)
