project(leetcode)

set(CMAKE_CXX_STANDARD 14)

add_executable(license_key_formating license_key_formating.cpp)
add_executable(container_with_most_water container_with_most_water.cpp)
add_executable(k_closest k_closest.cpp)
add_executable(longgest_substring_with_two_distinct_characters longgest_substring_with_two_distinct_characters.cpp)
# add_executable(0004_median_of_two_sorted_arrays 0004_median_of_two_sorted_arrays.cpp)
add_executable(0005_longest_palindrome 0005_longest_palindrome.cpp)
add_executable(0008_string_to_integer 0008_string_to_integer.cpp)
add_executable(0015_three_sum 0015_three_sum.cpp)
add_executable(0033_search_in_rotated_array 0033_search_in_rotated_array.cpp)
add_executable(0042_trappingg_rain_water 0042_trappingg_rain_water.cpp)
add_executable(0053_maximum_subarray 0053_maximum_subarray.cpp)
add_executable(0200_number_of_islands 0200_number_of_islands.cpp)
add_executable(0215_kth_largest_element 0215_kth_largest_element.cpp)